--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ gspread==5.12.0
 oauth2client==4.1.3
 pandas==2.1.4
 gspread-dataframe==3.3.1
+google-api-python-client==2.122.0
+google-auth==2.29.0
+google-auth-httplib2==0.2.0
