--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,5 @@ google-auth==2.40.3
 google-api-python-client==2.122.0
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.0
+httplib2==0.22.0
+oauth2client==4.1.3
